@@ -1,7 +1,10 @@
 
+--- LikeBack v1.3 released ---
+
 2009-07-16 (dazjorz)
  * Fixed encoding issues in the Trac plugin, and bumped version number to
  1.3.0 for imminent LikeBack release.
+ * Fixed some errors in the upgrade script.
 
 2009-06-26 (dazjorz)
  * Made the subject of all e-mails sent out by LikeBack start with
